samples/invalid/07-long-line.mmd
%% Diagram: Long line

direction LR

a["This label is intentionally very long to exceed the hard limit of one hundred characters in order to trigger a line length error in Graphrite"]
